initial CSS framework

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img id="choco-pie">
 
         </article>
-        <section>Article Content</section>
+        <section>Section Content</section>
         <div id="recipe">Will need notcard wall paper and ULs
             
             <ul>
