--- a/index.html
+++ b/index.html
@@ -52,13 +52,18 @@
 
         </div>
         <div id="share">
-            <img>
+            <img src="">
+            <p id="author">Vanessa Stevenson</p>
+            <p id="bio">
+                Food Enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.
+            </p>
             <button id="share-button">SHARE</button>
         </div>
     </main>
     <footer>
         <img id="food-icon">
-        All rights reserved
+        Delicious &copy; All rights reserved.<br>
+        Proudly published with Ghost.
     </footer>
 
     <script type="module" src="./app.js"></script>
