started css and centered content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header id="hdr1">Delcious picture</header>
+    <header id="hdr1"> <img src="assets\logo.png" alt="logo"> Delcious picture</header>
     <main id="main">
         <h1>Chocolate Pizza</h1>
         <article>
@@ -24,7 +24,6 @@
         </article>
         <section>   
             For the fig-swirl: Melt butter over medium hear in a saucepan. Add brown sugar and dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
-            </p>
         <br><br>    
             Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm.  Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
         <br><br>    
