styled header and added icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 </head>
 
 <body>
-    <header id="hdr1"> <img src="assets\logo.png" alt="logo"> Delcious picture</header>
+    <header id="hdr1"> 
+        <div><span><img src="assets\logo.png" alt="logo"></span> </div>
+        <div id="logo">
+        <span>Delicious<br>
+        <p id="blog"> BEST FOOD BLOG ON THE WEB</p> </span>
+    </div>
+
+    <div id="social"> 
+        <img src="assets\fb-icon.png" alt="facebook link"></span> 
+        <img src="assets\twit-icon.png" alt="twitter link"></span> 
+        <img src="assets\gp-icon.png" alt="google plus link"></span> 
+        <img src="assets\insta-icon.png" alt="instagram link"></span> 
+        <img src="assets\flic-icon.png" alt="flicker link"></span> 
+        <img src="assets\pint-icon.png" alt=" pintrest link"></span> 
+        <img src="assets\rss-icon.png" alt="rss link"></span> 
+        <img src="assets\mail-icon.png" alt="email link"></span> 
+    </div>
+
+    </header>
     <main id="main">
         <h1>Chocolate Pizza</h1>
         <article>
