--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@346;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
@@ -35,9 +39,13 @@
 
     </header>
     <main id="main">
-        <h1>Chocolate Pizza</h1>
+        <h1>
+            <div>Chocolate Pizza</div>
+            <div id="subheading">  POSTED ON 15 DEC/DESSERTS </div>
+            <div id="prince"><img src="assets\print-icon.png" alt="print page"> </div>
+            </h1>
         <article>
-            <img id="choco-pie">
+            <img src="assets\choco-pizza.png">
 
         </article>
         <section>   
@@ -49,23 +57,23 @@
         <br><br>
 
         </section>
-        <div id="recipe">Will need notcard wall paper and ULs
-            
-            <ul>
-                <li>1 1/2 cups milk</li>
-                <li>1/2 cup marscarpone</li>
-                <li>1/2 tsp pink salt</li>
-                <li>1 lb. Black Missions Figs</li>
-                <li>1/2 cup brown sugar</li>
-                <li>2-4 tbsp water</li>
-                <li>1 1/2 cups heavy cream</li>
-                <li>1/3 granulated sugar</li>
-                <li>2 egg yolks</li>
-                <li>1 lemon, juiced</li>
-                <li>2 tbsp butter</li>
-                <li>1 cup honey roasted pecans, roughly chopped</li>
+        <div class="recipe"> 
 
-           </ul>
+            <ul>
+                <li><input type="checkbox">1 1/2 cups milk</li>
+                <li><input type="checkbox">1/2 cup marscarpone</li>
+                <li><input type="checkbox">1/2 tsp pink salt</li>
+                <li><input type="checkbox">1 lb. Black Missions Figs</li>
+                <li><input type="checkbox">1/2 cup brown sugar</li>
+                <li><input type="checkbox">2-4 tbsp water</li>
+                <li><input type="checkbox">1 1/2 cups heavy cream</li>
+                <li><input type="checkbox">1/3 granulated sugar</li>
+                <li><input type="checkbox">2 egg yolks</li>
+                <li><input type="checkbox">1 lemon, juiced</li>
+                <li><input type="checkbox">2 tbsp butter</li>
+                <li><input type="checkbox">1 cup honey roasted pecans, roughly chopped</li>
+
+            </ul>
 
         </div>
         <div id="share">
