completed footer styling

--- a/index.html
+++ b/index.html
@@ -77,16 +77,18 @@
 
         </div>
         <div id="share">
-            <img src="">
-            <p id="author">Vanessa Stevenson</p>
+            <div id="name-image">
+            <img src="assets\van-pic.png">
+            Vanessa Stevenson</div>
+            <div id="share-center">
             <p id="bio">
                 Food Enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.
-            </p>
-            <button id="share-button">SHARE</button>
+            </p></div>
         </div>
+        <p align-"right"> <button id="share-button" style="float: right;">SHARE</button> </p>
     </main>
     <footer>
-        <img id="food-icon">
+        <img src="assets/small-logo.png"><br>
         Delicious &copy; All rights reserved.<br>
         Proudly published with Ghost.
     </footer>
